; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/backlight/extr_ili9320.c_ili9320_write_regs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/backlight/extr_ili9320.c_ili9320_write_regs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ili9320 = type { i32 }
%struct.ili9320_reg = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ili9320_write_regs(%struct.ili9320* %0, %struct.ili9320_reg* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ili9320*, align 8
  %6 = alloca %struct.ili9320_reg*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.ili9320* %0, %struct.ili9320** %5, align 8
  store %struct.ili9320_reg* %1, %struct.ili9320_reg** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %8, align 4
  br label %10

10:                                               ; preds = %28, %3
  %11 = load i32, i32* %8, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %33

14:                                               ; preds = %10
  %15 = load %struct.ili9320*, %struct.ili9320** %5, align 8
  %16 = load %struct.ili9320_reg*, %struct.ili9320_reg** %6, align 8
  %17 = getelementptr inbounds %struct.ili9320_reg, %struct.ili9320_reg* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.ili9320_reg*, %struct.ili9320_reg** %6, align 8
  %20 = getelementptr inbounds %struct.ili9320_reg, %struct.ili9320_reg* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @ili9320_write(%struct.ili9320* %15, i32 %18, i32 %21)
  store i32 %22, i32* %9, align 4
  %23 = load i32, i32* %9, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %14
  %26 = load i32, i32* %9, align 4
  store i32 %26, i32* %4, align 4
  br label %34

27:                                               ; preds = %14
  br label %28

28:                                               ; preds = %27
  %29 = load i32, i32* %8, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %8, align 4
  %31 = load %struct.ili9320_reg*, %struct.ili9320_reg** %6, align 8
  %32 = getelementptr inbounds %struct.ili9320_reg, %struct.ili9320_reg* %31, i32 1
  store %struct.ili9320_reg* %32, %struct.ili9320_reg** %6, align 8
  br label %10

33:                                               ; preds = %10
  store i32 0, i32* %4, align 4
  br label %34

34:                                               ; preds = %33, %25
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32 @ili9320_write(%struct.ili9320*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
